Update terminal reader to support modern terminal functions