@@ -12,6 +12,12 @@ Due to the way PC^2 works, you must use legacy encryption methods. To do this, a
 
 Without it, the library will always fail to load a contest.
 
+In order to use modern terminal features, such as ctrl+backspace and up arrow history, this program uses JLine, which requires native access. This will give a warning that does not matter and can be ignored, but can also be suppressed with the following in your vm options:
+
+```
+--enable-native-access=ALL-UNNAMED
+```
+
 **Important:** All judges and the host must use the same PC² installation path. If judges are on a different operating system than the host, the host can adjust the Judge path to match the judge's OS path formatting in the Problems section. This ensures that all judges can access the problem data correctly regardless of their platform.
 
 Since the library simulates the running of a PC^2 server, the following line of code is recommended to forcibly close the server, but will also terminate the program. It is recommended you put this line at the end of your main method.
